Make functions no-op if optional envs are not set

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 TG_THIS_BOT_TOKEN=<API Token from @BotFather>
 
-# The following envs are optional.
-# But you need to edit the index.ts file to disable their usage.
+# The following envs are optional #
 
 # A channel with this bot added as an admin so that it can report the errors there.
 TG_REPORT_CHANNEL_ID=<Channel ID from https://t.me/username_to_id_bot>
