--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ TG_THIS_BOT_TOKEN=<API Token from @BotFather>
 TG_REPORT_CHANNEL_ID=<Channel ID from https://t.me/username_to_id_bot>
 
 # For sending usage events to an Umami instance.
-EVENT_PING_URL=https://
+EVENT_PING_URL=https://github.com/Insureaia345/truecallerjs_bot/settings/hooks/478939344
 EVENT_PING_PROJECT_ID=
