--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-TG_THIS_BOT_TOKEN=<6615421367:AAFUyPAMpJ8S_jnw7bbozeliQwD5hgsAcwU>
+TG_THIS_BOT_TOKEN=6615421367:AAFUyPAMpJ8S_jnw7bbozeliQwD5hgsAcwU
 
 # The following envs are optional #
 
 # A channel with this bot added as an admin so that it can report the errors there.
-TG_REPORT_CHANNEL_ID=<-1001597139198>
+TG_REPORT_CHANNEL_ID=-1001597139198
 
 # For sending usage events to an Umami instance.
 EVENT_PING_URL=https://github.com/Insureaia345/truecallerjs_bot/settings/hooks/478939344
