--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-TG_THIS_BOT_TOKEN=<API Token from @BotFather>
+TG_THIS_BOT_TOKEN=<8020853633:AAFOsKWM6mfR7Umm7BUXux1CfLhE-y0bsgI>
 
 # The following envs are optional #
 
 # A channel with this bot added as an admin so that it can report the errors there.
-TG_REPORT_CHANNEL_ID=<Channel ID from https://t.me/username_to_id_bot>
+TG_REPORT_CHANNEL_ID=<https://t.me/nojiraman>
 
 # For sending usage events to an Umami instance.
-EVENT_PING_URL=https://
-EVENT_PING_PROJECT_ID=
+EVENT_PING_URL=https://https://t.me/nojiraman
+EVENT_PING_PROJECT_ID=https://t.me/nojiraman
