Improve .env.example instruction

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-TG_THIS_BOT_TOKEN=<API Token from @BotFather>
+# API Token from @BotFather on Telegram
+TG_THIS_BOT_TOKEN=
 
 # The following envs are optional #
 
