Refactor with some validation improvement

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # API Token from @BotFather on Telegram
 TG_THIS_BOT_TOKEN=
 
-# The following envs are optional #
+## The following envs are optional ##
 
 # A channel with this bot added as an admin so that it can report the errors there.
 TG_REPORT_CHANNEL_ID=<Channel ID from https://t.me/username_to_id_bot>
 
-# For sending usage events to an Umami instance.
+# For sending usage events to an umami.is instance.
 EVENT_PING_URL=https://
 EVENT_PING_PROJECT_ID=
