Migrate error reporting to Sentry

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ TG_THIS_BOT_TOKEN=
 
 ## The following envs are optional ##
 
-# A channel with this bot added as an admin so that it can report the errors there.
-TG_REPORT_CHANNEL_ID=<Channel ID from https://t.me/username_to_id_bot>
+# Error reporting to sentry.io
+SENTRY_DSN=https://
 
 # For sending usage events to an umami.is instance.
 EVENT_PING_URL=https://
